syntax = "proto3";
package dev.array21.drankroulette;

import "entity/game.proto";

message PostGameCreateRequest {
  Game game = 1;
}

message PostGameCreateResponse {
  string id = 2;
}